Fix modal double scroll bar on overflow

--- a/client/src/components/PropertyInspectorComponent/PropertyInspectorComponent.scss
+++ b/client/src/components/PropertyInspectorComponent/PropertyInspectorComponent.scss
@@ -2,7 +2,7 @@
 
 .pi-patch-modal {
     .patch-json-data{
-        max-height: 600px;
+        max-height: 60vh;
         overflow: auto;
         margin: 16px 0px;
     }
